# BookFiler-Project-Manager

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md
UML/: MVC_architecture_D20200324.uxf  module_system_D20200324.uxf
include/BookFiler-Module-File-Tree-Pane/: Interface.hpp
include/BookFiler-Module-Filesystem-Database/: Interface.hpp
include/BookFiler-Project-Manager/: Application.hpp  BookfilerRenderWidget.hpp  MainWindow.hpp
modules/: CMakeLists.txt
resources/: icons_file.qrc  icons_utility.qrc  settings.json  simpletreemodel.qrc
src/: readme.md
src/UI/: Application.cpp  Application.hpp  BookfilerRenderWidget.hpp  MainWindow.cpp  MainWindow.hpp  RenderWidget.cpp  RenderWidget.hpp  main.cpp  main.ui  ui_main.hpp  universalInclude.hpp
src/core/: config.hpp
src/modules/: CMakeLists.txt  readme.md
src/modules/FileTreePane/: CMakeLists.txt  Module.cpp  Module.hpp  readme.md
src/modules/FileTreePane/UI/: MainWidget.cpp  MainWidget.hpp  WidgetItemDelegate.cpp  WidgetItemDelegate.hpp  WidgetModel.cpp  WidgetModel.hpp
src/modules/FileTreePane/core/: config.hpp
src/modules/FilesystemDatabase/: CMakeLists.txt  Module.cpp  Module.hpp
src/modules/FilesystemDatabase/core/: Filesystem.cpp  Filesystem.hpp  FilesystemFileTable.cpp  FilesystemFileTable.hpp  FilesystemFileTableInclude.hpp  FilesystemFileTableModel.hpp  FilesystemSignal.cpp  FilesystemSignal.hpp  FilesystemSignalApple.cpp  FilesystemSignalApple.hpp  FilesystemSignalBase.hpp  FilesystemSignalInclude.hpp  FilesystemSignalPosix.cpp  FilesystemSignalPosix.hpp  FilesystemSignalWin.cpp  FilesystemSignalWin.hpp  config.hpp
src/plugins/: CMakeLists.txt  readme.md
src/plugins/UCD_PWA_Browser/: CMakeLists.txt  Interface.hpp  Plugin.cpp  Plugin.hpp  api.json  readme.md
src/plugins/UCD_PWA_Browser/UI/: MainWidget.cpp  MainWidget.hpp  TreeItem.cpp  TreeItem.hpp  TreeModel.cpp  TreeModel.hpp  universalInclude.hpp
src/plugins/UCD_PWA_Browser/core/: HTTP_JSON.cpp  HTTP_JSON.hpp  PiWebAPI.cpp  PiWebAPI.hpp  config.hpp
